# agentic-ai-and-rag

./: pyproject.toml
updated-langchain/: 1-langchain-intro.ipynb  2-model-integration.ipynb  3-tool-using.ipynb
